--- a/tonirs-core/Cargo.toml
+++ b/tonirs-core/Cargo.toml
@@ -11,6 +11,7 @@ serde_json = "1.0.134"
 rustc-hash = "2.1"
 uuid = {version = "1.11.0", features = ["v4"]}
 linkme = "0.3.31"
+anyhow = "1.0.95"
 
 [dev-dependencies]
 reqwest = { version = "0.12.11", features = ["json"] }
