--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 cargo-features = ["test-dummy-unstable"]
 
 [workspace]
-members = ["toni-core", "toni-macros", "toni-cli"]
+members = ["toni", "toni-macros", "toni-cli"]
 
 [package]
 name = "my_frame"
@@ -11,7 +11,7 @@ im-a-teapot = true
 
 [dependencies]
 toni-macros = { path = "./toni-macros" }
-toni-core = { path = "./toni-core" }
+toni = { path = "./toni" }
 uuid = {version = "1.11.0", features = ["v4"]}
 rustc-hash = "2.1"
 serde = { version = "1.0.216", features = ["derive"] }
