--- a/toni-macros/Cargo.toml
+++ b/toni-macros/Cargo.toml
@@ -2,6 +2,11 @@
 name = "toni-macros"
 version = "0.1.0"
 edition = "2024"
+description = "Macros for Toni"
+license = "MIT"
+repository = "https://github.com/monterxto/toni-rs"
+homepage = "https://github.com/monterxto/toni-rs"
+categories = ["asynchronous", "network-programming", "web-programming"]
 
 [lib]
 name = "toni_macros"
@@ -9,10 +14,11 @@ path = "src/lib.rs"
 proc-macro = true
 
 [dependencies]
-darling = "0.20.10"
 proc-macro2 = "1.0.92"
 quote = "1.0.38"
 syn = { version = "2.0.94", features = ["visit-mut", "default"] }
 rustc-hash = "2.1"
-linkme = "0.3.31"
-toni-core = { path = "../toni-core" }
+toni = { path = "../toni" }
+
+[dev-dependencies]
+toni = { path = "../toni" }
