--- a/toni/Cargo.toml
+++ b/toni/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 keywords = ["http", "web", "framework"]
 categories = ["asynchronous", "network-programming", "web-programming"]
-description = "Dependency injection, route resolver and traits for Toni"
+description = "Fast and modular web framework for scalable applications"
 license = "MIT"
 repository = "https://github.com/monterxto/toni-rs"
 homepage = "https://github.com/monterxto/toni-rs"
