--- a/toni/Cargo.toml
+++ b/toni/Cargo.toml
@@ -8,7 +8,7 @@ description = "Fast and modular web framework for scalable applications"
 license = "MIT"
 repository = "https://github.com/monterxto/toni-rs"
 homepage = "https://github.com/monterxto/toni-rs"
-readme = "./README.md"
+readme = "README.md"
 
 [dependencies]
 axum = "0.8.1"
