--- a/toni-cli/src/templates/new/Cargo.toml
+++ b/toni-cli/src/templates/new/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "{{project_name}}"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-toni-core = { version = "^{{version}}" }
-toni-macro = { version = "^{{version}}" }
+toni = { version = "{{version}}" }
+toni-macro = { version = "{{version}}" }
