--- a/toni-cli/Cargo.toml
+++ b/toni-cli/Cargo.toml
@@ -2,6 +2,10 @@
 name = "toni-cli"
 version = "0.1.0"
 edition = "2024"
+description = "CLI for Toni"
+license = "MIT"
+repository = "https://github.com/monterxto/toni-rs"
+homepage = "https://github.com/monterxto/toni-rs"
 
 [[bin]]
 name = "toni"
