--- a/toni/Cargo.toml
+++ b/toni/Cargo.toml
@@ -17,6 +17,7 @@ serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.134"
 rustc-hash = "2.1"
 anyhow = "1.0.95"
+async-trait = "0.1.86"
 
 [dev-dependencies]
 reqwest = { version = "0.12.11", features = ["json"] }
