--- a/toni/Cargo.toml
+++ b/toni/Cargo.toml
@@ -18,6 +18,7 @@ rustc-hash = "2.1"
 anyhow = "1.0.95"
 async-trait = "0.1.86"
 validator = "0.20.0"
+toni-macros = { path = "../toni-macros" }
 
 [dev-dependencies]
 reqwest = { version = "0.12.11", features = ["json"] }
