--- a/toni-axum/Cargo.toml
+++ b/toni-axum/Cargo.toml
@@ -16,3 +16,6 @@ serde_json = "1.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
+reqwest = { version = "0.12", features = ["json"] }
+async-trait = "0.1.86"
+rustc-hash = "2.1"
