--- a/toni-actix/Cargo.toml
+++ b/toni-actix/Cargo.toml
@@ -16,3 +16,6 @@ tokio = { version = "1", features = ["full"] }
 
 [dev-dependencies]
 actix-rt = "2"
+reqwest = { version = "0.12", features = ["json"] }
+async-trait = "0.1.86"
+rustc-hash = "2.1"
