--- a/toni-config/Cargo.toml
+++ b/toni-config/Cargo.toml
@@ -9,6 +9,9 @@ license = "MIT"
 thiserror = "2.0.17"
 dotenv = "0.15.0"
 toni-macros = { path = "../toni-macros" }
+toni = { path = "../toni" }
+async-trait = "0.1"
+rustc-hash = "2.0"
 validator = { version = "0.20.0", optional = true }
 
 [features]
@@ -17,3 +20,7 @@ validation = ["validator"]
 
 [dev-dependencies]
 serial_test = "3.2.0"
+toni-axum = { path = "../toni-axum" }
+tokio = { version = "1", features = ["full"] }
+reqwest = { version = "0.12", features = ["json"] }
+serde_json = "1.0"
