feat: add comprehensive integration tests for middleware, guards, pipes, and interceptors
- Add complete integration test suite demonstrating the full request lifecycle
- Add test coverage for middleware chain, guard authorization, pipe validation, and interceptor hooks
- Update middleware system to support multiple configurations per module
- Enhance HttpRequest with header utility methods (headers_mut, header, has_header)
- Refactor middleware chain to return concrete HttpResponse instead of boxed trait objects
- Update module macro to extract and include user-defined configure_middleware methods

--- a/toni-macros/Cargo.toml
+++ b/toni-macros/Cargo.toml
@@ -16,4 +16,4 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0.92"
 quote = "1.0.38"
-syn = { version = "2.0.94", features = ["visit-mut", "default"] }
+syn = { version = "2.0.94", features = ["visit-mut", "default", "full"] }
