--- a/toni/Cargo.toml
+++ b/toni/Cargo.toml
@@ -18,6 +18,7 @@ rustc-hash = "2.1"
 anyhow = "1.0.95"
 async-trait = "0.1.86"
 validator = "0.20.0"
+serde_urlencoded = "0.7"
 toni-macros = { path = "../toni-macros" }
 
 [dev-dependencies]
